<resources>
    <string name="app_name">Login</string>
    <string name="usuario">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="btn_iniciarSecion">Iniciar sesión</string>
    <string name="txt_bienvenido">¡Bienvenido!</string>
    <string name="intec">INTEC</string>
    <string name="TXTtoken">Token:</string>
    <string name="TXTusuario">Usuario:</string>
    <string name="TXTmensaje">Mensaje:</string>
    <string name="TXTempresas">Empresas:</string>
    <string name="TXTEstado" >Estado:</string>
    <string name="TXTTipoEstado">Tipo estado:</string>
    <string name="ButtonSalir">Salir</string>

    <string name="action_opciones">opciones</string>
    <string name="menu_home">Home</string>
    <string name="menu_user">Informacion del Usuario</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="TXTempresaInicio">Empresas seleccionada:</string>
</resources>